--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ Annoyed Yet?
 
 <link rel="stylesheet" href="../Style/styles.css">
 
-<script type="text/javascript" src="../Javascript/999Lives.js"></script>
+<script type="text/javascript" src="999Lives.js"></script>
+
 </head>
 
 <body>
-<i>;)</i>
+<i>;) Annoyed Yet</i>
 </body>
 
 </html>
