--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>So Mr. Mooney, could you tell us what you envision as the perfect fashion for sports?</h2>
+						<h2>Tell us what you envision as the perfect fashion for sports?</h2>
 					</header>
 					<p>When I first got the position of CEO of Quiksilver, I set out to make that ‘perfect fashion’ for sportswear. Unfortunately, I realized that wasn’t the case. Different sports require different specifications with the apparel. It’s amazing how different your performance in the particular sport due to the clothes you are wearing. My advice would be to wear the comfiest clothes that you can get your hands on that is fitting for that sport and just wear it. Quiksilver offers a variety of very fashionable, comfy and practical clothes.</p>
 				</div>
