--- a/works/HOTSPOT/index.html
+++ b/works/HOTSPOT/index.html
@@ -98,8 +98,8 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="New shops are now incorperated all around the world." alt="" /></a></div>
-								<div class="6u"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
+								<div class="6u"><a href="images/fulls/Quikstore.jpg" class="image fit from-left"><img src="images/fulls/Quikstore.jpg" title="New shops are now incorperated all around the world." alt="" /></a></div>
+								<div class="6u"><a href="images/fulls/Quiksurf.jpg" class="image fit from-right"><img src="images/fulls/Quiksurf.jpg" title="The Big Wave competition has ended resulting in multiple amazing performances. " alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
 								<div class="6u"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
