--- a/works/HOTSPOT/index.html
+++ b/works/HOTSPOT/index.html
@@ -41,7 +41,7 @@
 							<li><a href="#one">Introduction</a></li>
 							<li><a href="#two">Q and A</a></li>
 							<li><a href="#work">hai</a></li>
-							<li><a href="#contact">Comments</a></li>
+							<li><a href="../../index.html">Go back</a></li>
 						</ul>
 					</nav>
 
@@ -96,6 +96,8 @@
 					</header>
 
 					<!-- Lightbox Gallery  -->
+
+					<!-- All pics are 720-480 -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
 								<div class="6u"><a href="images/fulls/Quikstore.jpg" class="image fit from-left"><img src="images/fulls/Quikstore.jpg" title="New shops are now incorperated all around the world." alt="" /></a></div>
@@ -161,7 +163,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>@chez8251</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
