--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>About me</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
+							<p>I was born in Hong Kong but moved to Korea after three years. I stayed in Korea for 6 years going to an international school called Seoul Foreign British School, SFBS for short. I then moved to Shanghai to stay there for four years. I went to two different schools: Dulwhich Collage Shanhai (DCS for short), and Shanghai High School International Division (SHSID for short). Now I'm in Hong Kong, back to where I was born. I now go to a school called Kellett school.</p>
+							<p>I barely remember anything about Hong Kong. I remember some events that happened but nothing major. </p>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
 					</div>
